# 1P-SI2-backend

./: .env.development.template  .env.example  .env.railway.example  .gitattributes  .gitignore  .pre-commit-config.yaml  MOBILE_CONFIG.md  RAILWAY_DEPLOYMENT.md  README.md  alembic.ini  check_tables.py  check_workshop_ids.py  create_admin_user.py  debug_categories.py  debug_ids.py  debug_movements.py  debug_transactions.py  inspect_db.py  nixpacks.toml  pyproject.toml  pytest.ini  requirements.txt  update_constraint.py
alembic/: env.py
alembic/versions/: 35383c48189f_add_chat_tables.py  5450761a33ab_add_arrived_at_to_tracking_sessions.py  a1b2c3d4e5f6_add_sin_taller_disponible_estado.py  a91c4d6f7e81_add_incident_ai_analyses_table.py  add_cancellation_requests_table.py  add_optimized_indexes.py  add_outbox_pattern_tables.py  add_timeout_status_to_ai_analysis.py  b04c970dd4e9_add_assignment_attempts_table.py  bcfa17e3a088_add_files_table.py  c2fb7174c607_add_real_time_infrastructure_tables.py  d7a646680674_initial_migration_from_models.py  e8b757791785_add_vehiculo_imagen_table.py  e922011468f0_recreate_missing_indexes.py  ed64a62f1f1b_add_assignment_attempts_table_fixed.py  f1a2b3c4d5e6_add_rechazos_taller_table.py  fix_event_priority_enum_values.py  h123456789ab_recreate_performance_indexes.py
app/: config.py  db.py  main.py  security.py
app/api/: __init__.py
app/api/v1/: diagnostics.py  health.py  metrics.py  reassignment.py  router.py  websocket.py
app/core/: __init__.py  config.py  constants.py  database.py  dependencies.py  event_publisher.py  exceptions.py  logging.py  metrics.py  middleware.py  permissions.py  push_integration.py  responses.py  security.py  state_machine.py  state_validators.py  storage.py  websocket.py  websocket_events.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  administrator.py  assignment_attempt.py  audit_log.py  cancellation_request.py  categoria.py  client.py  configuracion.py  conversation.py  especialidad.py  estados_servicio.py  event_log.py  evidencia.py  evidencia_audio.py  evidencia_imagen.py  file.py  financial_movement.py  historial_servicio.py  incident_ai_analysis.py  incidente.py  login_attempt.py  message.py  notification.py  outbox_event.py  password_reset_token.py  platform_commission.py  push_token.py  rechazo_taller.py  refresh_token.py  revoked_token.py  servicio.py  servicio_taller.py  stripe_event_log.py  technician.py  technician_especialidad.py  technician_location_history.py  tracking_session.py  transaction.py  two_factor_auth.py  user.py  (+7 more)
app/modules/: __init__.py
app/modules/assignment/: __init__.py  reassignment_service.py  router.py  schemas.py  services.py
app/modules/audit/: __init__.py  repository.py  router.py  schemas.py  service.py
app/modules/auth/: __init__.py  repository.py  router.py  schemas.py  (+1 more)
app/routers/: auth.py  sessions.py
app/schemas/: __init__.py  auth.py  reassignment.py  session.py
app/services/: __init__.py  auth_service.py  reassignment_service.py  session_service.py
app/shared/: __init__.py
app/tasks/: dashboard_alerts.py  dashboard_metrics.py  state_timeouts.py  tracking_cleanup.py
app/templates/: __init__.py  account_unlocked_email.py  email_base.py  otp_email.py  password_changed_email.py  password_reset_email.py  password_reset_otp_email.py  security_notification_email.py  welcome_email.py
docs/: ANALISIS_TEMPLATES.md  CHECKLIST_REESTRUCTURACION.md  ESTADO_ACTUAL_PROYECTO.md  MIGRATION_SUMMARY.md  PROGRESO_REESTRUCTURACION.md  PROMETHEUS_GRAFANA.md  RAILWAY_DEPLOYMENT.md  RESUMEN_PROGRESO_FASE_7_8.md  TESTING_GUIDE.md  USO_TEMPLATES_EMAIL.md  VALIDACION_TIPO_USUARIO_WEB.md  auditoria backend FastAPI.md
scripts/: __init__.py  update_admin_data.py
tests/: __init__.py  conftest.py  test_bugfix_incident_realtime_state_sync.py  test_lockout_policy.py  test_permissions.py  test_permissions_integration.py  test_profile_management.py  test_rate_limiting.py  test_welcome_email_integration.py
tests/integration/: README_CU13.md  test_cu13_reasignacion.py  test_incident_ai_endpoints.py  test_legacy_flows_migrated.py
tests/test_api/: __init__.py  test_auth.py  test_health.py  test_tokens.py
tests/test_core/: test_exceptions.py  test_responses.py  test_security.py  test_websocket_events.py
tests/test_repositories/: __init__.py  test_user_repository.py
tests/test_services/: __init__.py  test_auth_service.py  test_incident_ai_classifier.py
tests/unit/: test_delivery_strategies.py  test_outbox_processor_integration.py
(+150 files in other folders)
